--- a/home.html
+++ b/home.html
@@ -166,9 +166,8 @@
                 <div class="row ps-5 ms-5">
                     <div class="col"><img class="img-fluid" width="500px" src="home.png" ></div>
                     <div class="col pt-5 mt-5">
-                        <h2>We present you,</h2>
-                        <h2>One of the unique collection of</h2>
-                        <h2>Styles in the world called</h2>
+                        <h2>We present you to,</h2>
+                        <h2>the world of students called</h2>
                         <h2>VitZone</h2>
                     </div>
                 </div>
