--- a/home.html
+++ b/home.html
@@ -137,6 +137,9 @@
         .x {
           display: none;
         }
+        p{
+            font-size:10px;
+        }
       }
     </style>
     <header>
@@ -166,9 +169,9 @@
                 <div class="row ps-5 ms-5">
                     <div class="col"><img class="img-fluid" width="500px" src="home.png" ></div>
                     <div class="col pt-5 mt-5">
-                        <h2>We present you to,</h2>
-                        <h2>the world of students called</h2>
-                        <h2>VitZone</h2>
+                        <p style="font-size:20px">We present you to,</p>
+                        <p style="font-size:20px">the world of students called</p>
+                        <p style="font-size:20px">VitZone</p>
                     </div>
                 </div>
               </div>
