--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
         a:nth-child(5) {
             width: 100px;
         }
-        h2{
+        p{
             color: white;
             font-family: 'Lobster', cursive;
             font-size: 40px;
@@ -140,6 +140,10 @@
         p{
             font-size:10px;
         }
+          .imgcl{
+              width:200px;
+              height:200px;
+          }
       }
     </style>
     <header>
@@ -163,15 +167,15 @@
                   </div>
               </div>
               <div class="x">
-                  <img src="vitzone.jpeg" style="border-radius: 50%;position:relative;bottom:45px;left:40px" height="50px" width="50px">
+                  <img src="vitzone.jpeg" class="imgcl" style="border-radius: 50%;position:relative;bottom:45px;left:40px" height="50px" width="50px">
               </div>
               <div id="2" class="pt-5 mt-5">
                 <div class="row ps-5 ms-5">
                     <div class="col"><img class="img-fluid" width="500px" src="home.png" ></div>
                     <div class="col pt-5 mt-5">
-                        <p style="font-size:20px">We present you to,</p>
-                        <p style="font-size:20px">the world of students called</p>
-                        <p style="font-size:20px">VitZone</p>
+                        <p style="font-size:40px;color:white;">We present you to,</p>
+                        <p style="font-size:40px;color:white;">the world of students called</p>
+                        <p style="font-size:40px;color:white;">VitZone</p>
                     </div>
                 </div>
               </div>
