--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
         nav {
             position: sticky;
             margin: 10px auto 0;
-            width: 300px;
+            width: 250px;
             height: 50px;
             border-radius: 8px;
             font-size: 0;
@@ -153,6 +153,7 @@
         background-attachment: fixed;
         background-size:cover;
         height:800px;
+        width:100%;
         ">
               <div class="row">
                   <div class="col">
