--- a/home.html
+++ b/home.html
@@ -252,7 +252,7 @@
                                       </div>
                                   </div>
                               </div>
-                              <div class="embedsocial-hashtag" data-ref="70c94fe42ccb4f229d0798ea65cb53311ff2a066"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
+                              <div class="embedsocial-hashtag" data-ref="70c94fe42ccb4f229d0798ea65cb53311ff2a066" ><a class="feed-powered-by-es" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
                             </div>
                           </div>
                         </div>
