--- a/home.html
+++ b/home.html
@@ -15,9 +15,12 @@
 </head>
 <body>
     <style>
-        html{
-            overflow-x: hidden;
-        }
+        html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
         body{
