--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <style>
-        html, body {
+        body {
             overflow-x: hidden;
         }
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
