--- a/home.html
+++ b/home.html
@@ -19,6 +19,9 @@
         html,body {
             overflow-x: hidden;
         }
+        body{
+            overflow-y:hidden;
+        }
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
         body{
