--- a/home.html
+++ b/home.html
@@ -177,9 +177,9 @@
                 <div class="row ps-5 ms-5">
                     <div class="col"><img class="ic" width="500px" src="home.png" ></div>
                     <div class="col pt-5 mt-5">
-                        <h2 class="fc">We present you,</h2>
-                        <h2 class="fc">One of the unique collection of</h2>
-                        <h2 class="fc">Styles in the world called</h2>
+                        <h2 class="fc">We present you to,</h2>
+                        <h2 class="fc">One of the unique teams of</h2>
+                        <h2 class="fc">India called</h2>
                         <h2 class="fc">VitZone</h2>
                     </div>
                 </div>
