--- a/services.html
+++ b/services.html
@@ -207,8 +207,11 @@
                     <figure class="md-ui card-figure">
                         <img class="figure-photo" src="review.svg">
                         <figcaption class="figure-caption">
-                            <h1 class="caption-title">Online class Weblinks</h1>
+                            <h1 class="caption-title">Online calculators</h1>
                             <p class="caption-paragraph">Want to know the answer but can't get it? Here is our page to look into all calculators and tools to cover your syllabus</p>
+                            <div class="d-flex justify-content-center">
+                                <button onclick="window.location.href='https://vit-calculators.herokuapp.com/calculators.html'" class="btn btn-dark">See More</button>
+                            </div>
                         </figcaption>
                     </figure>
                 </section>
