--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
         </div>
     </div>
-    <footer id="5" class="py-4 mt-auto mt-5" style="position:relative;top:50px;background-color:black">
+    <footer id="5" class="py-4 mt-auto" style="position:relative;top:10px;background-color:black">
         <div class="d-flex justify-content-center">
             <button class=" btn btn-light" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact</button>
         </div>
