--- a/services.html
+++ b/services.html
@@ -215,6 +215,18 @@
                         </figcaption>
                     </figure>
                 </section>
+                <section class="md-ui component-card" data-material-ui-component="card">
+                      <figure class="md-ui card-figure">
+                          <img class="figure-photo" src="whatsapp.svg">
+                          <figcaption class="figure-caption">
+                              <h1 class="caption-title">Group Organizer</h1>
+                              <p class="caption-paragraph">Organize all our groups in one page. Add a group, join the group using link.</p>
+                              <div class="d-flex justify-content-center">
+                                <button onclick="window.location.href='https://vgroups.herokuapp.com/'" class="btn btn-dark">See More</button>
+                            </div>
+                          </figcaption>
+                      </figure>
+                  </section>
             </div>
           </p>
         </div>
@@ -225,8 +237,8 @@
                       <figure class="md-ui card-figure">
                           <img class="figure-photo" src="whatsapp.svg">
                           <figcaption class="figure-caption">
-                              <h1 class="caption-title">Group Organizer</h1>
-                              <p class="caption-paragraph">Organize all our groups in one page. Add a group, join the group using link.</p>
+                              <h1 class="caption-title">FFCS planner</h1>
+                              <p class="caption-paragraph">Tired of outdated ffcs timetable? Wait for our amazing update!</p>
                           </figcaption>
                       </figure>
                   </section>
