--- a/services.html
+++ b/services.html
@@ -235,7 +235,7 @@
               <div class="row d-flex justify-content-center">
                   <section class="md-ui component-card" data-material-ui-component="card">
                       <figure class="md-ui card-figure">
-                          <img class="figure-photo" src="whatsapp.svg">
+                          <img class="figure-photo" src="shedule.svg">
                           <figcaption class="figure-caption">
                               <h1 class="caption-title">FFCS planner</h1>
                               <p class="caption-paragraph">Tired of outdated ffcs timetable? Wait for our amazing update!</p>
